tests/negative/test_switch_case_expr_duplicate.orb
fnc main() {
    u32 x = 100;
    switch (x) {
    case 50+50:
        ret;
    case 100:
        ret;
    }
}